--- a/view/partials/head.ejs
+++ b/view/partials/head.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf8">
-	<title></title>
+	<title><%= title %></title>
 
 	<link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Quicksand:300,400,500" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
