Added express sessions and argon2

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,3 +16,5 @@
 /*	3	The pages
 -----------------------------------------*/
 	@import 'pages/register';
+	@import 'pages/profile';
+	@import 'pages/error';
