--- a/view/pages/login.ejs
+++ b/view/pages/login.ejs
@@ -13,8 +13,10 @@
 				<h1>Login and discover the stories from other people</h1>
 			</header>
 
-			<form action="/" method="GET">
-				<input type="email" name="email" placeholder="Email" required>
+			<p><%= message %></p>
+
+			<form action="/login" method="POST">
+				<input type="text" name="username" placeholder="Username" required>
 				<input type="password" name="password" placeholder="Password" required>
 				<input type="submit" value="Login">
 			</form>
