--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,4 +17,5 @@
 -----------------------------------------*/
 	@import 'pages/register';
 	@import 'pages/profile';
+	@import 'pages/edit-profile';
 	@import 'pages/error';
