--- a/view/pages/register.ejs
+++ b/view/pages/register.ejs
@@ -8,6 +8,9 @@
 			<header>
 				<h1>Register and share your travel stories</h1>
 			</header>
+			<% if (message) { %>
+			<p class="message"><%= message %></p>
+			<% } %>
 			<form action="/" method="POST">
 				<input type="text" name="name" placeholder="What's your name" required>
 				<input type="text" name="place" placeholder="Where are you from">
