--- a/view/partials/head.ejs
+++ b/view/partials/head.ejs
@@ -6,5 +6,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Quicksand:300,400,500" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
