--- a/view/pages/error.ejs
+++ b/view/pages/error.ejs
@@ -2,7 +2,7 @@
 
 <main id="error">
 	<div class="wrapper">
-		<img src="images/logo.svg">	
+		<img src="/images/logo.svg">	
 		<article>
 			<h1><%= code %></h1>
 			<p><%= message %></p>
