--- a/view/pages/register.ejs
+++ b/view/pages/register.ejs
@@ -2,7 +2,7 @@
 
 <div id="container">
 	<main class="wrapper register">
-		<img src="images/logo.svg">	
+		<img src="/images/logo.svg">	
 		<a class="standardButton" href="/login">Login</a>
 		<section>
 			<header>
