--- a/view/partials/footer.ejs
+++ b/view/partials/footer.ejs
@@ -1,3 +1,3 @@
-<script src="js/scripts.js" type="text/javascript"></script>
+<script src="/js/scripts.js" type="text/javascript"></script>
 </body>
 </html>
