--- a/view/partials/head.ejs
+++ b/view/partials/head.ejs
@@ -5,8 +5,9 @@
 	<title><%= title %></title>
 
 	<link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Quicksand:300,400,500" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="/css/main.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 </head>
 <body>
