Added a detail page and fixed some minor bugs

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,4 +21,5 @@
 	@import 'pages/edit-profile';
 	@import 'pages/feed';
 	@import 'pages/write';
+	@import 'pages/detail';
 	@import 'pages/error';
