--- a/sass/pages/_profile.scss
+++ b/sass/pages/_profile.scss
@@ -22,7 +22,7 @@ header.profile {
 		text-align: center;
 
 		span.name {
-			@include quicksand(em(24), 500)
+			@include quicksand(em(24), 500);
 		}
 
 		span.place {
@@ -98,7 +98,7 @@ section.stories {
 	article {
 		position: relative;
 		background: $white;
-		width: em(355);
+		width: em(370);
 		margin-bottom: em(30);
 		padding-bottom: em(20);
 		overflow: hidden;
