--- a/view/pages/write.ejs
+++ b/view/pages/write.ejs
@@ -31,8 +31,8 @@
 			<label>Where did your story happen
 				<input type="text" name="where" placeholder="Tell us the place" required>
 			</label>
-			<input type="number" name="lat" placeholder="Latitude">
-			<input type="number" name="long" placeholder="Longtitude">
+			<input type="number" step="any" name="lat" placeholder="Latitude">
+			<input type="number" step="any" name="long" placeholder="Longtitude">
 			<span class="label">Do you have a picture?</span>
 			<label for="fileInput" class="fileInputLabel">
 				<input id="fileInput" type="file" name="banner">
