--- a/view/pages/feed.ejs
+++ b/view/pages/feed.ejs
@@ -21,7 +21,7 @@
 </nav>
 
 <section class="stories">
-	<div class="wrapper storiewrapper">
+	<div class="wrapper storiesWrapper">
 		<% if (dataStories.length == 0) { %>
 		<p>Sorry user didn't wrote any stories</p>
 		<%
