--- a/view/pages/profile.ejs
+++ b/view/pages/profile.ejs
@@ -34,7 +34,7 @@
 <section class="stories">
 	<h2>Stories from <%= dataUser.name %></h2>
 
-	<div class="wrapper storiewrapper">
+	<div class="wrapper storiesWrapper">
 		<% if (dataStories.length == 0) { %>
 		<p>Sorry user didn't wrote any stories</p>
 		<%
